--- a/app/src/main/res/layout/dialog_confirm_remove.xml
+++ b/app/src/main/res/layout/dialog_confirm_remove.xml
@@ -16,7 +16,7 @@ android:padding="15dp"
     app:layout_constraintBottom_toTopOf="@id/confirmRemoveButtonLayout"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
-    android:layout_marginBottom="5dp"
+    android:layout_marginVertical="@dimen/line_space"
     android:gravity="center"
     android:maxLines="1"
     android:maxWidth="280dp"
@@ -32,10 +32,10 @@ android:padding="15dp"
     android:id="@+id/confirmRemoveNameDivider"
     android:layout_width="match_parent"
     android:layout_height="1dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="?attr/colorOutline"
     app:layout_constraintTop_toBottomOf="@id/confirmRemoveDialogTitle"
     app:layout_constraintBottom_toTopOf="@id/confirmRemoveButtonLayout"
-    android:layout_marginVertical="5dp"
+    android:layout_marginVertical="@dimen/line_space"
     />
 
 
@@ -43,10 +43,11 @@ android:padding="15dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/confirmRemoveDialogTitle"
+    app:layout_constraintTop_toBottomOf="@id/confirmRemoveNameDivider"
     android:id="@+id/confirmRemoveButtonLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginVertical="@dimen/line_space"
     android:orientation="horizontal">
 
     <Button
