--- a/app/src/main/res/layout/fragment_chore.xml
+++ b/app/src/main/res/layout/fragment_chore.xml
@@ -22,9 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textSize="@dimen/medium_text_size"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="7dp"
             app:layout_constraintEnd_toStartOf="@id/historyChoresButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -35,9 +35,9 @@
         <TextView
             android:id="@+id/historyChoresButton"
             android:padding="4dp"
-            android:textSize="@dimen/medium_text_size"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginHorizontal="5dp"
+            android:layout_marginHorizontal="7dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/activeChoresButton"
             android:textColor="?attr/colorOnPrimary"
