--- a/app/src/main/res/layout/dialog_add_home.xml
+++ b/app/src/main/res/layout/dialog_add_home.xml
@@ -13,23 +13,22 @@
         android:layout_height="wrap_content"
         android:text="@string/add_home_dialog_title"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/addHomeDialogHint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textStyle="bold"
         android:textColor="?attr/colorOnPrimary"
         android:textSize="@dimen/large_text_size"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="@dimen/line_space"
         />
 
     <View
         android:id="@+id/addHomeNameDivider"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="?attr/colorPrimaryDark"
+        android:layout_height="1dp"
+        android:background="?attr/colorOutline"
         android:layout_marginHorizontal="5dp"
         app:layout_constraintTop_toBottomOf="@id/addHomeDialogTitle"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="@dimen/line_space"
         />
 
     <TextView
@@ -42,18 +41,18 @@
         app:layout_constraintBottom_toTopOf="@id/addHomeButtonLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginVertical="@dimen/line_space"
         />
 
 
 
     <LinearLayout
+        android:id="@+id/addHomeButtonLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addHomeDialogHint"
-        android:id="@+id/addHomeButtonLayout"
+        android:layout_marginVertical="@dimen/line_space"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
