--- a/app/src/main/res/layout/dialog_chore_detail.xml
+++ b/app/src/main/res/layout/dialog_chore_detail.xml
@@ -34,6 +34,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/baseline_close_24"
+        android:padding="2dp"
         android:minWidth="0dp"
         android:minHeight="0dp"
         />
@@ -54,8 +55,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/colorPrimary"
             android:textColor="?attr/colorOnPrimary"
-            android:background="@color/ivory"
             android:hint="@string/create_chore_name_hint" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,7 +94,7 @@
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toBottomOf="@id/choreDetailAssignedTo"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/line_space_large"
         android:text="@string/chore_detail_time_to_complete" />
 
 
@@ -132,7 +133,7 @@
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toBottomOf="@id/choreDetailTimeToDoText"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/line_space_large"
         android:text="@string/chore_detail_reward" />
 
     <TextView
@@ -154,7 +155,7 @@
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toBottomOf="@id/choreDetailRewardText"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/line_space_large"
         android:text="@string/chore_detail_timed_text" />
 
 
@@ -166,7 +167,7 @@
         android:minWidth="0dp"
         android:layout_marginStart="20dp"
         android:textColor="?attr/colorOnPrimary"
-        android:background="@color/ivory"
+        android:background="@android:color/transparent"
         app:layout_constraintTop_toTopOf="@id/choreDetailIsTimedText"
         app:layout_constraintBottom_toBottomOf="@id/choreDetailIsTimedText"
         app:layout_constraintStart_toEndOf="@id/choreDetailIsTimedText"
@@ -191,7 +192,7 @@
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toBottomOf="@id/choreDetailIsTimedText"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/line_space_large"
         android:text="@string/chore_detail_due_text" />
 
     <TextView
@@ -238,7 +239,7 @@
         android:id="@+id/choreRepeatText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/line_space_large"
         android:textColor="?attr/colorOnPrimary"
         android:text="@string/chore_detail_repeats_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -247,10 +248,10 @@
     <Spinner
         android:id="@+id/choreIntervalSpinner"
         android:background="@android:drawable/editbox_background"
+        android:backgroundTint="?attr/colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:backgroundTint="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="@id/choreRepeatText"
         app:layout_constraintBottom_toBottomOf="@id/choreRepeatText"
         app:layout_constraintStart_toEndOf="@id/choreRepeatText"
@@ -265,6 +266,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/choreRepeatText"
         app:layout_constraintEnd_toEndOf="parent"
@@ -286,40 +288,4 @@
             android:layout_marginHorizontal="5dp"
             android:text="@string/create_home_yes" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!-- TODO: leftover code for templates -->
-    <!--    <EditText-->
-    <!--        android:id="@+id/choreDetailTimeToDo"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDoText"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDoText"-->
-    <!--        app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDoText"-->
-    <!--        android:layout_marginStart="20dp"-->
-    <!--        android:ems="10"-->
-    <!--        android:inputType="number"-->
-    <!--        android:maxWidth="50dp"-->
-    <!--        />-->
-
-    <!--    <Spinner-->
-    <!--        android:id="@+id/choreCompleteTimeSpinner"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="20dp"-->
-    <!--        app:layout_constraintTop_toTopOf="@id/choreDetailTimeToDo"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@id/choreDetailTimeToDo"-->
-    <!--        app:layout_constraintStart_toEndOf="@id/choreDetailTimeToDo"-->
-    <!--        android:spinnerMode="dropdown"-->
-    <!--        />-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/choreNameText"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="@id/createChoreNameInput"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@id/createChoreNameInput"-->
-    <!--        android:text="@string/chore_detail_name_text"-->
-    <!--        />-->
