--- a/app/src/main/res/layout/dialog_create_home.xml
+++ b/app/src/main/res/layout/dialog_create_home.xml
@@ -14,21 +14,24 @@
         android:layout_height="wrap_content"
         style="@style/Title"
         android:textColor="?attr/colorOnPrimary"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/createHomeNameInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:paddingBottom="20dp"
-        android:textSize="@dimen/medium_text_size"
+        android:layout_marginVertical="@dimen/line_space"
         android:text="@string/create_home_title" />
 
 
     <LinearLayout
+        android:id="@+id/createHomeButtonLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/createHomeNameInput"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginVertical="@dimen/line_space"
         >
 
         <Button
@@ -57,8 +60,8 @@
         android:layout_height="wrap_content"
         android:minWidth="300dp"
         style="@style/EditTextLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/createHomeTitle"
+        app:layout_constraintBottom_toTopOf="@id/createHomeButtonLayout"
         app:counterEnabled="true"
         app:counterMaxLength="25"
         >
