--- a/app/src/main/res/layout/dialog_user_icon.xml
+++ b/app/src/main/res/layout/dialog_user_icon.xml
@@ -14,11 +14,13 @@
         android:textSize="@dimen/medium_text_size"
         android:textStyle="bold"
         android:textColor="?attr/colorOnPrimary"
+        android:layout_marginVertical="@dimen/line_space"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/line_space"
          />
 </LinearLayout>
