--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,9 +27,10 @@
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/homeFragmentTopLayoutCol"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/colorPrimaryVariant"
+            android:background="?attr/colorPrimaryDark"
             >
 
             <ImageButton
@@ -58,7 +59,6 @@
                 android:layout_marginHorizontal="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:background="?attr/colorPrimaryVariant"
                 android:gravity="center"
                 android:maxLines="1"
                 android:maxWidth="280dp"
@@ -86,49 +86,56 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="?attr/colorPrimaryDark"
+                android:background="?attr/colorOutline"
                 app:layout_constraintBottom_toBottomOf="parent"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/homeFragContainer"
-        android:layout_above="@+id/homeBottomNav"
-        android:layout_below="@id/homeFragmentTopLayout"
-        />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="?attr/colorPrimaryDark"
-        android:layout_below="@id/homeFragContainer"
-        />
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/homeBottomNav"
-        app:itemIconTint="?attr/colorOnPrimary"
-        app:itemTextColor="?attr/colorOnPrimary"
-        android:background="?attr/colorPrimary"
-        android:layout_above="@id/adViewHome"
-        app:menu="@menu/home_bottom_navigation"
-        app:labelVisibilityMode="labeled"
-    />
 
     <com.google.android.gms.ads.AdView
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adViewHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_below="@id/homeFragmentTopLayout"
         android:background="?attr/colorPrimary"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-7280349628854769/6593993547"/>
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        />
+<!--    TODO: swap id for production -->
+<!--    ads:adUnitId="ca-app-pub-7280349628854769/6593993547"-->
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/homeFragContainer"
+        android:layout_above="@+id/homeBottomSepLine"
+        android:layout_below="@id/adViewHome"
+        />
+
+    <View
+        android:id="@+id/homeBottomSepLine"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?attr/colorOutline"
+        android:layout_above="@id/homeBottomNav"
+        android:translationZ="1dp"
+        />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/homeBottomNav"
+        app:itemTextColor="?attr/colorOnPrimary"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/home_bottom_navigation"
+        app:itemIconTint="?attr/colorOnPrimary"
+        app:itemBackground="@color/bottom_nav_icon_col"
+        android:background="?attr/colorPrimary"
+        app:labelVisibilityMode="labeled"
+    />
+<!--    app:itemIconTint="@color/bottom_nav_icon_col"-->
+
 
 </RelativeLayout>
