--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -12,6 +12,8 @@
         android:id="@+id/homeRecyclerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:textSize="18sp"
         android:text="@string/home_notes_title"
         android:textColor="?attr/colorOnPrimary"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +22,6 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
-        android:textSize="@dimen/medium_text_size"
         android:textStyle="bold"
         />
 
