--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -20,7 +20,8 @@
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
-        android:textSize="@dimen/medium_text_size"
+        android:padding="4dp"
+        android:textSize="18sp"
         android:textStyle="bold"
         />
 
