--- a/app/src/main/res/layout/join_home_recycler_row.xml
+++ b/app/src/main/res/layout/join_home_recycler_row.xml
@@ -25,6 +25,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/joinHomeSentByText"
+                android:textSize="@dimen/medium_text_size"
+                android:textStyle="bold"
                 android:text="@string/home_name_placeholder" />
 
             <TextView
@@ -32,6 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="?attr/colorOnPrimary"
+                android:layout_marginTop="5dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/joinHomeHomeName"
@@ -60,6 +63,7 @@
                 app:layout_constraintEnd_toStartOf="@id/joinHomeDeclineInvite"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:backgroundTint="?attr/colorSecondary"
                 android:contentDescription="@string/join_home_accept_invite_desc"
                 android:layout_marginEnd="20dp"
                 />
@@ -71,7 +75,6 @@
                 android:src="@drawable/baseline_close_24"
                 android:minWidth="30dp"
                 android:minHeight="30dp"
-                android:backgroundTint="@android:color/holo_red_light"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
