--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,14 +2,16 @@
     <!-- Base application theme. -->
     <style name="Chorey" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary_color_dark</item>
-        <item name="colorPrimaryDark">@color/line_color_dark</item>
+        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimaryContainer">@color/line_color_dark</item>
+        <item name="colorOutline">@color/line_color_dark</item>
         <item name="colorAccent">@color/secondary_color_dark</item>
         <item name="android:textColorPrimary">@color/text_color_dark</item>
         <item name="android:textColorSecondary">@color/text_color_dark</item>
         <item name="colorOnPrimary">@color/text_color_dark</item>
         <item name="colorSecondary">@color/secondary_color_dark</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="colorPrimaryVariant">@color/line_color_dark</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
         <item name="android:navigationBarColor">?attr/colorPrimary</item>
 
         <!-- Customize your theme here. -->
