--- a/app/src/main/res/values/chorey_logo_background.xml
+++ b/app/src/main/res/values/chorey_logo_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="chorey_logo_background">#FFFFF0</color>
+    <color name="chorey_logo_background">@color/white</color>
 </resources>
