--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="text_color">#000000</color>
     <color name="primary_color_green">#c7e5c8</color>
     <color name="line_color">#d9dedb</color>
+    <color name="light_gray">#f6f6f6</color>
 
 
 <!--    Light mode -->
