--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -139,18 +139,18 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/adViewMenu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            ads:layout_constraintStart_toStartOf="parent"
-            ads:layout_constraintEnd_toEndOf="parent"
-            ads:layout_constraintTop_toBottomOf="@id/menuSeparationLine"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
-        />
+<!--        <com.google.android.gms.ads.AdView-->
+<!--            xmlns:ads="http://schemas.android.com/apk/res-auto"-->
+<!--            android:id="@+id/adViewMenu"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="?attr/colorPrimary"-->
+<!--            ads:layout_constraintStart_toStartOf="parent"-->
+<!--            ads:layout_constraintEnd_toEndOf="parent"-->
+<!--            ads:layout_constraintTop_toBottomOf="@id/menuSeparationLine"-->
+<!--            ads:adSize="BANNER"-->
+<!--            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
+<!--        />-->
 <!--  TODO: swap for real ID in production  -->
 <!--  ads:adUnitId="ca-app-pub-7280349628854769/6593993547"-->
         <TextView
@@ -170,7 +170,7 @@
         android:id="@+id/all_rooms_recycler"
         style="?attr/recyclerViewStyle"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@id/adViewMenu"
+        app:layout_constraintTop_toBottomOf="@id/menuTitleLayout"
         app:layout_constraintBottom_toTopOf="@id/addHomeButton"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
