--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Chorey" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/primary_color_dark</item>
-        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/primary_color_dark</item>
         <item name="colorPrimaryContainer">@color/line_color_dark</item>
         <item name="colorOutline">@color/line_color_dark</item>
         <item name="colorAccent">@color/secondary_color_dark</item>
