--- a/app/src/main/res/layout/contrib_recycler_row.xml
+++ b/app/src/main/res/layout/contrib_recycler_row.xml
@@ -35,6 +35,18 @@
                 android:textColor="?attr/colorOnPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/home_item_zero" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?attr/colorOnPrimary"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/contribCardValue"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="5dp"
+                android:translationZ="1dp"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
