--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/primary_color_dark</item>
         <item name="colorPrimaryContainer">@color/line_color_dark</item>
-        <item name="colorOutline">@color/line_color_dark</item>
+        <item name="colorOutline">@color/line_color</item>
         <item name="colorAccent">@color/secondary_color_dark</item>
         <item name="android:textColorPrimary">@color/text_color_dark</item>
         <item name="android:textColorSecondary">@color/text_color_dark</item>
