--- a/app/src/main/res/layout/dialog_expense_detail.xml
+++ b/app/src/main/res/layout/dialog_expense_detail.xml
@@ -26,7 +26,8 @@
         android:layout_height="1dp"
         android:background="?attr/colorOutline"
         app:layout_constraintTop_toBottomOf="@id/expenseName"
-        android:layout_marginTop="@dimen/line_space"
+        app:layout_constraintBottom_toTopOf="@+id/expenseMiddleLayout"
+        android:layout_marginVertical="@dimen/line_space"
         />
 
     <ImageButton
@@ -46,7 +47,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/expenseMiddleLayout"
         android:background="@drawable/dialog_background_outlined"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="@dimen/line_space"
         app:layout_constraintTop_toBottomOf="@id/expenseNameLine"
