--- a/app/src/main/res/layout/dialog_add_home.xml
+++ b/app/src/main/res/layout/dialog_add_home.xml
@@ -53,6 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addHomeDialogHint"
         android:layout_marginVertical="@dimen/line_space"
+        android:padding="3dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
