--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -139,6 +139,14 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/menuMainLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/menuSeparationLine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            >
+
 <!--        <com.google.android.gms.ads.AdView-->
 <!--            xmlns:ads="http://schemas.android.com/apk/res-auto"-->
 <!--            android:id="@+id/adViewMenu"-->
@@ -180,7 +188,7 @@
         android:id="@+id/all_rooms_recycler"
         style="?attr/recyclerViewStyle"
         tools:ignore="MissingConstraints"
-        app:layout_constraintTop_toBottomOf="@id/menuTitleLayout"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/addHomeButton"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
@@ -199,5 +207,6 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
